--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -50,6 +50,9 @@
         </a>
     </ul>
 
+    <form th:action="@{/buy}" method="get">
+        <input class="btn btn-primary" type="submit" value="buy">
+    </form>
 
 
 
