--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -51,7 +51,7 @@
     </ul>
 
     <form th:action="@{/buy}" method="get">
-        <input class="btn btn-primary" type="submit" value="Remove items from cart">
+        <input class="btn btn-primary" type="submit" value="Buy items from cart">
     </form>
 
 
