--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -42,6 +42,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/products">Products</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/bought">Bought Items</a>
+            </li>
         </ul>
     </div>
 </nav>
@@ -57,7 +60,7 @@
         <span th:text="${product.price}"> Price</span>
         <span>
         <form th:action="@{'/cart/' + ${product.id}}" method="get">
-            <input class="btn btn-primary" type="submit" value="buy">
+            <input class="btn btn-primary" type="submit" value="add to cart">
         </form></span>
     </a>
 </ul>
