--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -27,10 +27,14 @@
             <li class="nav-item">
                 <a class="nav-link" href="/products">Products</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/bought">Bought Items</a>
+            </li>
         </ul>
     </div>
 </nav>
 <!-navbar ends-->
+
 <body>
 <div class="container">
     <div class="row">
