--- a/src/main/resources/templates/bought.html
+++ b/src/main/resources/templates/bought.html
@@ -10,6 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <head>
         <meta charset="utf-8"/>
@@ -23,7 +25,7 @@
         <title>Bought by user</title>
     </head>
 
-
+<body style="padding: 40px">
 
     <!-navbar starts-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -56,11 +58,14 @@
         <a  class="list-group-item list-group-item-action" th:each="product : ${bought}" >
             <span> Produkt: </span>
             <span th:text="${product.name}"> Product </span>
+            <br>
             <span> Cena: </span>
             <span th:text="${product.price}"> Price</span>
+            <br>
             <span> Data: </span>
             <span th:text="${product.dateSold}"> Price</span>
+            <br>
         </a>
     </ul>
-
+</body>
 </html>
