--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+<link rel="stylesheet" th:href="@{/css/styles.css}">
 <head>
     <title>Hello user!</title>
 </head>
@@ -30,7 +30,7 @@
     </div>
 </nav>
 <!-navbar ends-->
-<body>
+<body style="padding: 40px">
 <h1>Logged in succesfull, that's why you can see this page!</h1>
 </body>
 </html>
