--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
     <title>Login</title>
 </head>
 <!-navbar starts-->
@@ -36,7 +36,7 @@
     </div>
 </nav>
 <!-navbar ends-->
-<body>
+<body style="padding: 40px">
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
