--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <head>
@@ -26,6 +27,7 @@
 
 
 <!-navbar starts-->
+    <body style = "padding: 40px">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">shop-app</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -118,13 +120,16 @@
     <a  class="list-group-item list-group-item-action" th:each="product : ${products}" th:href="@{'/products/' + ${product.id}}">
         <span> Produkt: </span>
         <span th:text="${product.name}"> Product </span>
+        <br>
         <span> Cena: </span>
         <span th:text="${product.price}"> Price</span>
+        <br>
         <span>
         <form th:action="@{'/cart/' + ${product.id}}" method="get">
             <input class="btn btn-primary" type="submit" value="add to cart">
         </form></span>
     </a>
 </ul>
+</body>
 
 </html>
